--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.0",
+    "fs": "^0.0.1-security",
     "next": "^13.3.2",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.23",
